--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -73,8 +73,8 @@
 
 /* Scrollbars */
 
-@layer components {
-    /* Firefox scrollbars */
+/* @layer components {
+    /* Firefox scrollbars * /
 
     .smallscroll {
         --sb-width: 8px;
@@ -82,7 +82,7 @@
         scrollbar-width: thin;
     }
 
-    /* Chrome scrollbars */
+    /* Chrome scrollbars * /
     .smallscroll::-webkit-scrollbar {
         width: var(--sb-width);
         height: var(--sb-width);
@@ -92,4 +92,31 @@
     .smallscroll::-webkit-scrollbar-thumb {
         background-color: #666b7a;
     }
+} */
+
+/* Firefox scrollbars */
+.smallscroll {
+    --sb-width: 6px;
+    --sb-clr: #c1c1c178; /* #666b7a */
+    --sb-bkg: transparent; /* transparent */ /*#30303080*/
+    scrollbar-color: var(--sb-clr) var(--sb-bkg);
+    scrollbar-width: thin;
 }
+
+.smallscroll-light {
+    --sb-width: 6px;
+    --sb-clr: #30303080; /* #666b7a */
+    --sb-bkg: transparent; /* transparent */ /*#c1c1c178*/
+}
+
+/* Chrome scrollbars */
+.smallscroll::-webkit-scrollbar {
+    width: var(--sb-width);
+    height: var(--sb-width);
+    background-color: var(--sb-bkg);
+}
+
+.smallscroll::-webkit-scrollbar-thumb {
+    background-color: var(--sb-clr);
+}
+
